--- a/res/xml/bars_settings.xml
+++ b/res/xml/bars_settings.xml
@@ -88,6 +88,11 @@
             android:fragment="org.omnirom.omnigears.interfacesettings.NavBar"
             android:title="@string/navigation_bar_title" />
         <PreferenceScreen
+            android:key="navigation_bar_dimen"
+            android:fragment="org.omnirom.omnigears.interfacesettings.NavBarDimen"
+            android:title="@string/navbar_dimen_title" />
+
+        <PreferenceScreen
             android:key="navigation_ring"
             android:fragment="org.omnirom.omnigears.interfacesettings.NavRing"
             android:title="@string/navigation_ring_title" />
