[1/2] OmniGears : custom clock shortcut in notification drawer.
Change-Id: I68b9a8bbb84042cbf4bc448cfc30599132f03256

Conflicts:

	res/values/custom_strings.xml

--- a/res/xml/notification_panel_settings.xml
+++ b/res/xml/notification_panel_settings.xml
@@ -32,4 +32,11 @@
             android:summary="@string/quick_swipe_summary"
             android:persistent="false"/>
 
+    <Preference
+            android:key="clock_shortcut"
+            android:selectable="true"
+            android:title="@string/clock_shortcut_title"
+            android:summary="@string/clock_shortcut_default"
+            android:persistent="false"/>
+
 </PreferenceScreen>
