--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -470,9 +470,40 @@
     <string name="ime_interpolator_title">Interpolator</string>
     <string name="ime_duration_title">IME Duration</string>
 
-    <!-- QuickSettings: Dynamic Row -->
+    <!-- QuickSettings: Tiles -->
     <string name="qs_configurable_title">QuickSettings configurable</string>
-    <string name="qs_configurable_summary">Enable/disable dynamic row changes</string>
+    <string name="qs_configurable_summary">Choose Column or Dynamic changes for QuickSettings</string>
+    <string name="quick_settings_default">Default (3 columns)</string>
+    <string name="quick_settings_dynamic">Dynamic mode</string>
+    <string name="quick_settings_4_columns">4 columns</string>
+    <string name="quick_settings_ribbon">Ribbon mode</string>
+    <string name="quick_settings_ribbon_summary">Enable/disable Ribbon tiles on notification panel</string>
+    <string name="add">Add</string>
+    <string name="quick_settings_title">Quick settings</string>
+    <string name="tile_picker_title">Ribbon Tiles</string>
+    <string name="tile_picker_summary">View, select or change the displayed Ribbon tiles</string>
+    <string name="tile_choose_title">Choose a Ribbon tile</string>
+    <string name="title_tile_airplane">Airplane</string>
+    <string name="title_tile_battery">Battery</string>
+    <string name="title_tile_bluetooth">Bluetooth</string>
+    <string name="title_tile_brightness">Brightness</string>
+    <string name="title_tile_sleep">Sleep</string>
+    <string name="title_tile_location">Location</string>
+    <string name="title_tile_torch">Torch</string>
+    <string name="title_tile_mobiledata">Network</string>
+    <string name="title_tile_autorotate">Orientation</string>
+    <string name="title_tile_settings">Settings</string>
+    <string name="title_tile_sound">Sound</string>
+    <string name="title_tile_sync">Sync</string>
+    <string name="title_tile_wifi">Wi-Fi</string>
+    <string name="title_tile_user">User switcher</string>
+    <string name="title_tile_quiet_hours">Quiet hours</string>
+    <string name="title_tile_volume">Volume</string>
+    <string name="title_tile_immersive">Immersive</string>
+    <string name="title_tile_usbmode">Usb tether</string>
+    <string name="tiles_reset_message">Restore the default displayed Ribbon tiles?</string>
+    <string name="quicksettings_linked_title">Ribbon linked mode</string>
+    <string name="quicksettings_linked_summary">Allow Ribbon tiles to follow QuickSettings</string>
 
     <!-- QuickSettings: Quick Pulldown -->
     <string name="title_quick_pulldown">Quick pulldown</string>
