--- a/res/xml/bars_settings.xml
+++ b/res/xml/bars_settings.xml
@@ -37,18 +37,6 @@
                 android:summary="@string/status_bar_notif_count_summary"
                 android:persistent="false"/>
 
-        <CheckBoxPreference
-                android:key="status_bar_traffic"
-                android:title="@string/show_network_speed"
-                android:summary="@string/show_network_speed_summary"
-                android:persistent="false" />
-
-        <CheckBoxPreference
-                android:key="status_bar_network_activity"
-                android:title="@string/show_activity_indicators_on_status_bar_title"
-                android:summary="@string/show_activity_indicators_on_status_bar_summary"
-                android:persistent="false"/>
-
         <ListPreference
                 android:key="quick_pulldown"
                 android:title="@string/title_quick_pulldown"
@@ -101,6 +89,34 @@
             android:title="@string/voicemail_breath_title"
             android:summary="@string/voicemail_breath_summary"
             android:persistent="false"/>
+
+        <CheckBoxPreference
+                android:key="status_bar_network_activity"
+                android:title="@string/show_activity_indicators_on_status_bar_title"
+                android:summary="@string/show_activity_indicators_on_status_bar_summary"
+                android:persistent="false"/>
+
+        <ListPreference
+                android:key="network_traffic_state"
+                android:title="@string/show_network_traffic_state"
+                android:summary="@string/show_network_traffic_state_summary"
+                android:entries="@array/show_network_traffic_state_entries"
+                android:entryValues="@array/show_network_traffic_state_values"
+                android:persistent="false" />
+
+        <CheckBoxPreference
+                android:key="network_traffic_bytes"
+                android:title="@string/show_network_traffic_bytes"
+                android:summary="@string/show_network_traffic_bytes_summary"
+                android:persistent="false" />
+
+        <ListPreference
+                android:key="network_traffic_period"
+                android:title="@string/show_network_traffic_frequency"
+                android:summary="@string/show_network_traffic_frequency_summary"
+                android:entries="@array/show_network_traffic_frequency_entries"
+                android:entryValues="@array/show_network_traffic_frequency_values"
+                android:persistent="false" />
 
     </PreferenceCategory>
 
